fix bug in result list

--- a/Resources/Private/Templates/Search/Index.html
+++ b/Resources/Private/Templates/Search/Index.html
@@ -23,7 +23,7 @@
 		</div>
 	</f:form>
 
-	<f:if condition="{hasNoResults}}">
+	<f:if condition="{hasNoResults}">
 		<f:then>
 			{f:translate(key: 'tx_mia3search_search.no_results')}
 		</f:then>
