Fix: broken pagination
The pagination was broken in php 7.2. This patch fixes the issue.

--- a/Resources/Private/Partials/Pagination.html
+++ b/Resources/Private/Partials/Pagination.html
@@ -12,7 +12,7 @@
 				<f:then><li class="mia3-search-pagination-active mia3-search-pagination-page"></f:then>
 				<f:else><li class="mia3-search-pagination-page"></f:else>
 			</f:if>
-				<f:link.action addQueryString="true" arguments="{page: page}">{page}</f:link.action>
+				<f:link.action addQueryString="true" arguments="{page: page, query: query}">{page}</f:link.action>
 			</li>
 		</f:for>
 		<f:if condition="{pagination.nextPage}">
