--- a/Resources/Private/Templates/Search/Index.html
+++ b/Resources/Private/Templates/Search/Index.html
@@ -44,7 +44,7 @@
 						</div>
 					</div>
 				</f:for>
-				<f:render partial="Pagination" arguments="{pagination: pagination}"/>
+				<f:render partial="Pagination" arguments="{_all}"/>
 			</s:paginate>
 		</f:else>
 	</f:if>
