Fix: Use Saku crop property instead of fluid’s

--- a/Resources/Private/Templates/Search/Index.html
+++ b/Resources/Private/Templates/Search/Index.html
@@ -40,7 +40,7 @@
 							<a href="{result.pageUrl}">{result.pageUrl}</a>
 						</div>
 						<div class="mia3-search-result-content">
-							<s:wrapWords words="{query}">{result.content -> f:format.raw() -> f:format.crop(maxCharacters: 600)}</s:wrapWords>
+							<s:wrapWords words="{query}" crop="100">{result.content -> f:format.raw()}</s:wrapWords>
 						</div>
 					</div>
 				</f:for>
